trunk/Archive2/f6/fbd267a6a0ec85/output
main.cpp:17:20: error: member access into incomplete type 'A'
    std::cout << a -> a << std::endl;
                   ^
main.cpp:3:8: note: forward declaration of 'A'
struct A;
       ^
main.cpp:20:12: error: allocation of incomplete type 'A'
A* a = new A;
           ^
main.cpp:3:8: note: forward declaration of 'A'
struct A;
       ^
2 errors generated.
